--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ reqwest = { version = "0.12.15", features = ["multipart"] }
 anyhow = "1.0.97"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+icalendar = { version = "0.16.13", features = ["chrono-tz"] }
+rrule = "0.13.0"
+chrono = "0.4.40"
+now = "0.1.3"
